<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16sp"
    tools:context=".MainActivity">

    <!--  DISTANCY  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_distancy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTintMode=""
            android:hint="@string/txt_distancy_hint"
            android:textColorHighlight="@color/teal"
            android:inputType="number"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/txt_distancy_description"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <!--  PRICE  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/txt_price_hint"
            android:inputType="number"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/txt_price_description"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <!--  AUTONOMY  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_autonomy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/txt_autonomy_hint"
            android:inputType="number"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/txt_autonomy_description"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <!--  TOTAL  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/txt_total_amount_description"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_total_ammount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/txt_total_amount_default_value"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/teal"
            android:paddingVertical="16dp"
            android:text="@string/txt_calculate_button_title"
            android:textAllCaps="true"
            android:textSize="18sp"
            app:cornerRadius="8dp" />
    </LinearLayout>

</LinearLayout>